Added sync and toolDetail presenter, update main

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ui.newTool.NewToolActivity"></activity>
+        <activity android:name=".ui.newTool.NewToolActivity" />
+        <activity android:name=".ui.tootDetail.ToolDetailActivity" />
+        <activity android:name=".ui.Sync.SyncActivity"></activity>
     </application>
 
 </manifest>
