--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,12 +26,16 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
 
+    compile 'com.github.satyan:sugar:1.4'
+    compile 'de.greenrobot:eventbus:2.4.0'
+
     // Dagger 2 and Compiler
     // Required for @Generated annotation (missing in Java <= 1.6; therefore, Android)
     compile 'com.android.support:appcompat-v7:25.2.0'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.google.dagger:dagger-compiler:2.0.1'
     compile 'com.google.dagger:dagger:2.0.1'
+
     testCompile 'junit:junit:4.12'
     apt 'com.google.dagger:dagger-compiler:2.0.1'
     provided 'javax.annotation:jsr250-api:1.0'
