--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        >
+        <!--android:theme="@style/Theme.AppCompat.Light.NoActionBar"-->
 
         <meta-data
             android:name="DATABASE"
@@ -36,4 +38,5 @@
         <activity android:name=".ui.Sync.SyncActivity"></activity>
     </application>
 
+    <uses-permission android:name="android.permission.INTERNET" />
 </manifest>
